--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>432 Tagged Open Ruby Bugs as of 2020-02-29 09:34:49 +0900</title>
+<title>432 Tagged Open Ruby Bugs as of 2020-03-04 06:17:06 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -22,27 +22,27 @@
 <input type="submit" value="regexp" />
 <input type="submit" value="arm" />
 <input type="submit" value="aix" />
-<input type="submit" value="backport" />
 <input type="submit" value="solaris" />
 <input type="submit" value="fiber" />
-<input type="submit" value="openssl" />
+<input type="submit" value="backport" />
 <input type="submit" value="autoload" />
 <input type="submit" value="ruby3" />
 <input type="submit" value="unfixable" />
-<input type="submit" value="linux" />
+<input type="submit" value="openssl" />
 <input type="submit" value="haiku" />
 <input type="submit" value="wip-patch" />
+<input type="submit" value="linux" />
 <input type="submit" value="parser" />
 <input type="submit" value="doc" />
 <input type="submit" value="mips" />
-<input type="submit" value="uriencoding" />
 <input type="submit" value="other" />
+<input type="submit" value="uriencoding" />
 <input type="submit" value="enc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
 (<span id="matched">432</span> matched)
 <table>
-<caption>432 Tagged Open Ruby Bugs as of 2020-02-29 09:34:49 +0900</caption>
+<caption>432 Tagged Open Ruby Bugs as of 2020-03-04 06:17:06 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -51,6 +51,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16669">16669</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16669">Rails Action Text unit tests fail since b9007b6c548f91e88fd3f2ffa23de740431fa969</a>
+</td>
+</tr>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/16668">16668</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16668">Syntax error in tool/vcs.rb</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16660">16660</a>
 </td>
@@ -84,13 +98,6 @@
 </td>
 <td>win build</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16651">Extensions Do Not Compile on Mingw64</a>
-</td>
-</tr>
-<tr class=" backport ">
-<td><a href="https://bugs.ruby-lang.org/issues/16641">16641</a>
-</td>
-<td>backport</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16641">Backport request: MJIT crashes on a certain flow of branches</a>
 </td>
 </tr>
 <tr class=" win enc ">
@@ -476,13 +483,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16143">BOM UTF-8 is not removed after rewind</a>
-</td>
-</tr>
-<tr class=" backport ">
-<td><a href="https://bugs.ruby-lang.org/issues/16138">16138</a>
-</td>
-<td>backport</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16138">Backport Struct.new empty option hash fix to 2.5 and 2.6</a>
 </td>
 </tr>
 <tr class=" win ext ">
