--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>429 Tagged Open Ruby Bugs as of 2020-03-04 09:42:44 +0900</title>
+<title>430 Tagged Open Ruby Bugs as of 2020-03-07 00:45:51 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,9 +40,9 @@
 <input type="submit" value="enc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">429</span> matched)
+(<span id="matched">430</span> matched)
 <table>
-<caption>429 Tagged Open Ruby Bugs as of 2020-03-04 09:42:44 +0900</caption>
+<caption>430 Tagged Open Ruby Bugs as of 2020-03-07 00:45:51 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -51,6 +51,20 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" build ">
+<td><a href="https://bugs.ruby-lang.org/issues/16674">16674</a>
+</td>
+<td>build</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16674">Build issue of FreeBSD 12</a>
+</td>
+</tr>
+<tr class=" lib ">
+<td><a href="https://bugs.ruby-lang.org/issues/16672">16672</a>
+</td>
+<td>lib</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16672">net/http leaves original content-length header intact after inflating response</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16669">16669</a>
 </td>
@@ -2464,13 +2478,6 @@
 </td>
 <td>ext</td>
 <td><a href="https://bugs.ruby-lang.org/issues/10203">TCPServer.new has strange behaviour when EADDRINUSE without specifying hostname</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/10167">10167</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/10167">Prime#include?(mod) hangs up</a>
 </td>
 </tr>
 <tr class=" win core ">
