--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>430 Tagged Open Ruby Bugs as of 2020-03-07 00:45:51 +0900</title>
+<title>428 Tagged Open Ruby Bugs as of 2020-03-09 12:54:51 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -40,9 +40,9 @@
 <input type="submit" value="enc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">430</span> matched)
+(<span id="matched">428</span> matched)
 <table>
-<caption>430 Tagged Open Ruby Bugs as of 2020-03-07 00:45:51 +0900</caption>
+<caption>428 Tagged Open Ruby Bugs as of 2020-03-09 12:54:51 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -51,6 +51,27 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16680">16680</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16680">[Breaking Change] Ruby 2.7 not support  symlinks folder in $LOAD_PATH to work with autoload.</a>
+</td>
+</tr>
+<tr class=" test ">
+<td><a href="https://bugs.ruby-lang.org/issues/16679">16679</a>
+</td>
+<td>test</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16679">Test of Ruby fails under multiple OS user userland installations</a>
+</td>
+</tr>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16677">16677</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16677">Negative integer powered (**) to a float number results in a complex </a>
+</td>
+</tr>
 <tr class=" build ">
 <td><a href="https://bugs.ruby-lang.org/issues/16674">16674</a>
 </td>
@@ -252,13 +273,6 @@
 </td>
 <td>patch core</td>
 <td><a href="https://bugs.ruby-lang.org/issues/16465">False keyword warning against Struct#initialize</a>
-</td>
-</tr>
-<tr class=" core notbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/16462">16462</a>
-</td>
-<td>core notbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16462">Ruby 2.7 autoload not working with $RUBYLIB (maybe circular dependency error)</a>
 </td>
 </tr>
 <tr class=" patch fiber ">
@@ -891,13 +905,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/15247">Windows - TEMP folder, non 8.3 &amp; drive, fails &amp; errors in test-all (ruby &amp; rdoc)</a>
 </td>
 </tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/15244">15244</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15244">Method #extname return empty string if filename is dot (&#39;.&#39;)</a>
-</td>
-</tr>
 <tr class=" test ">
 <td><a href="https://bugs.ruby-lang.org/issues/15209">15209</a>
 </td>
@@ -1393,13 +1400,6 @@
 </td>
 <td>win regexp</td>
 <td><a href="https://bugs.ruby-lang.org/issues/14137">Windows / MinGW - Regexp - Character Properties - General Category</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/14119">14119</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/14119">IPAddr#include? does not seem to support the subnet mask</a>
 </td>
 </tr>
 <tr class=" regexp ">
@@ -2193,13 +2193,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/11335">`ruby -r debug` catchpoint problem</a>
 </td>
 </tr>
-<tr class=" core maybenotbug ">
-<td><a href="https://bugs.ruby-lang.org/issues/11304">11304</a>
-</td>
-<td>core maybenotbug</td>
-<td><a href="https://bugs.ruby-lang.org/issues/11304">[PATCH] Kernel.global_variables should observe $~.</a>
-</td>
-</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/11269">11269</a>
 </td>
@@ -2688,13 +2681,6 @@
 </td>
 <td>win encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/9245">Kernel::system gives wrong output for utf-8 characters on windows under utf-8 console</a>
-</td>
-</tr>
-<tr class=" patch lib ">
-<td><a href="https://bugs.ruby-lang.org/issues/9242">9242</a>
-</td>
-<td>patch lib</td>
-<td><a href="https://bugs.ruby-lang.org/issues/9242">Rdoc detection of aliases</a>
 </td>
 </tr>
 <tr class=" patch win core ">
