--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>428 Tagged Open Ruby Bugs as of 2020-03-09 12:54:51 +0900</title>
+<title>427 Tagged Open Ruby Bugs as of 2020-03-10 01:36:33 +0900</title>
 <link rel="stylesheet"  href="app.css" />
 </head>
 <body>
@@ -26,11 +26,11 @@
 <input type="submit" value="fiber" />
 <input type="submit" value="backport" />
 <input type="submit" value="autoload" />
-<input type="submit" value="ruby3" />
-<input type="submit" value="unfixable" />
 <input type="submit" value="openssl" />
+<input type="submit" value="unfixable" />
 <input type="submit" value="haiku" />
 <input type="submit" value="wip-patch" />
+<input type="submit" value="ruby3" />
 <input type="submit" value="linux" />
 <input type="submit" value="parser" />
 <input type="submit" value="doc" />
@@ -40,9 +40,9 @@
 <input type="submit" value="enc" /></p>
 <label for="filter">Filter Tags:</label>
 <input id="filter" type="text" size="80" />
-(<span id="matched">428</span> matched)
+(<span id="matched">427</span> matched)
 <table>
-<caption>428 Tagged Open Ruby Bugs as of 2020-03-09 12:54:51 +0900</caption>
+<caption>427 Tagged Open Ruby Bugs as of 2020-03-10 01:36:33 +0900</caption>
 <thead>
 <tr class=" Tags ">
 <th>Bug ID</th>
@@ -51,6 +51,13 @@
 </tr>
 </thead>
 <tbody>
+<tr class=" core ">
+<td><a href="https://bugs.ruby-lang.org/issues/16682">16682</a>
+</td>
+<td>core</td>
+<td><a href="https://bugs.ruby-lang.org/issues/16682">Ruby 2.7.0p0 crash on exit if there is an active RUBY_INTERNAL_EVENT_GC_EXIT tracepoint</a>
+</td>
+</tr>
 <tr class=" core ">
 <td><a href="https://bugs.ruby-lang.org/issues/16680">16680</a>
 </td>
@@ -506,13 +513,6 @@
 <td><a href="https://bugs.ruby-lang.org/issues/16110">Doesn&#39;t detect deadlock on Ruby 2.4 and 2.5 on Windows</a>
 </td>
 </tr>
-<tr class=" ruby3 ">
-<td><a href="https://bugs.ruby-lang.org/issues/16044">16044</a>
-</td>
-<td>ruby3</td>
-<td><a href="https://bugs.ruby-lang.org/issues/16044">Float::ROUNDS (FLT_ROUNDS) should not be a constant.</a>
-</td>
-</tr>
 <tr class=" core ext maybenotbug ">
 <td><a href="https://bugs.ruby-lang.org/issues/16031">16031</a>
 </td>
@@ -679,13 +679,6 @@
 </td>
 <td>win encoding</td>
 <td><a href="https://bugs.ruby-lang.org/issues/15621">system({}, ...) breaks nonascii ENV[&quot;PATH&quot;] on Windows</a>
-</td>
-</tr>
-<tr class=" patch core ">
-<td><a href="https://bugs.ruby-lang.org/issues/15608">15608</a>
-</td>
-<td>patch core</td>
-<td><a href="https://bugs.ruby-lang.org/issues/15608">What should be the correct output for Method#inspect with singleton methods?</a>
 </td>
 </tr>
 <tr class=" core autoload ">
